Silence native access warning regarding `lz4-java`